--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@ font-weight: 400;
 line-height: 20px;
   margin: 0;
   padding: 5px;
-  background-color: #e6e6e6;
+  background-color: #f2f1f1;
+  color: #101010;
 }
 
 h1 {
@@ -36,7 +37,6 @@ ul {
 }
 
 a {
-  display: inline-block;
   color : black;
   border-radius: 5px;
   cursor: pointer;
@@ -61,7 +61,7 @@ header {
   border-bottom: 1px solid #ddd;
   display: flex;
   align-items: center;
-  padding: 1rem;
+  padding: 0rem;
   position: sticky;
   top: 0;
   z-index: 1000;
