--- a/mutPattern.css
+++ b/mutPattern.css
@@ -65,3 +65,33 @@ background-color: grey;
   cursor: pointer;
   font-size: 16px;
 }
+
+body {
+  /*font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+  background: #fafafa; */ 
+}
+svg {
+  /*border: 1px solid #ccc;
+  background: #fff;*/
+}
+.node {
+  cursor: pointer;
+  stroke: #333;
+  stroke-width: 1px;
+}
+.link {
+  stroke: #000000;
+  stroke-width: 2px;
+  fill: none;
+  opacity: 1;
+}
+.arrowhead {
+  fill: #000000;
+}
+.weight-label {
+  fill: #333;
+  font-size: 12px;
+  pointer-events: none;
+}
