triangulated.html - header link colours fixed

--- a/triangulated.css
+++ b/triangulated.css
@@ -2,9 +2,9 @@
 	font-family: "Times New Roman", Times, serif;
 }
 
-a:link, a:visited {
+/*a:link, a:visited {
 	color: brown;
-}
+}*/
 
 p {
 	line-height: 105%;
